# AMMA-Your-Motherly-Storyteller

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DOCKER_README.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.simple  GITHUB_DEPLOYMENT.md  README.md  app.py  docker-compose.yml  install.bat  install.py  install.sh  langgraph.json  main.py  nginx.conf  pyproject.toml  railway-env-example.txt  start_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-frontend.yml  unit-tests.yml
AMMA-UI/: next.config.mjs
AMMA-UI/app/: globals.css  page.tsx
AMMA-UI/components/: AnimatedStars.tsx
src/amma/: __init__.py  context.py  graph.py  prompts.py  state.py  tools.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
